--- a/template/base.html
+++ b/template/base.html
@@ -78,7 +78,8 @@
 				</a>
 			</li>
 			<li id="nav-reporting">
-				<a href="">
+				<!-- default to report last 7 days -->
+				<a href="/report/buyorder/7/">
 				Report
 				</a>
 			</li>
