More work on reports

--- a/template/ReportBase.html
+++ b/template/ReportBase.html
@@ -4,10 +4,17 @@
 {% block level_2_navigation %}
 	<ul>
 		<li id="nav-report-buyorder">
-			<a href="/report/buyorder" title="Your sales reports">
+			<a href="/report/buyorder/7/" title="Your sales reports">
 				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/71/discount-128.png"/>
 			</a>
 			<h3>My Sales</h3>
+		</li>
+
+		<li id="nav-report-cart">
+			<a href="/report/cart/7/" title="Your cart reports">
+				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/71/discount-128.png"/>
+			</a>
+			<h3>My Carts</h3>
 		</li>
 
 	</ul>
