--- a/template/ReviewCart.html
+++ b/template/ReviewCart.html
@@ -188,8 +188,8 @@
 					
 					// back to previous page
 					setTimeout(function() {  
-						//window.location.reload();
-						window.history.go(-1);
+						window.location.reload();
+						//window.history.go(-1);
 					}, 5000)
 					
 				}
