--- a/template/ReportBase.html
+++ b/template/ReportBase.html
@@ -10,11 +10,11 @@
 			<h3>My Sales</h3>
 		</li>
 
-		<li id="nav-report-mybuyer">
-			<a href="/report/mybuyer/7/" title="Your buyer reports">
+		<li id="nav-report-myseller">
+			<a href="/report/myseller/7/" title="Your seller reports">
 				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/71/discount-128.png"/>
 			</a>
-			<h3>My Buyers</h3>
+			<h3>My Sellers</h3>
 		</li>
 
 	</ul>
