--- a/template/base.html
+++ b/template/base.html
@@ -16,6 +16,7 @@
 	<!-- JS to turn a form into AJAX call -->
 	<script src="/static/formjs/jquery.form.js"></script> 
 
+	<!-- toast -->
 	<script src="/static/toast/jquery.toastmessage.js" type="text/javascript"></script> 
 	<LINK REL=StyleSheet HREF="/static/toast/css/jquery.toastmessage.css" TYPE="text/css" MEDIA=screen>
 	
@@ -35,6 +36,9 @@
 	<script type="text/javascript" src="/static/tinymce/js/tinymce/jquery.tinymce.min.js"></script>	
 	<script type="text/javascript" src="/static/tinymce/js/tinymce/tinymce.min.js"></script>	
 		
+	<!-- highcharts -->
+	<script src="http://code.highcharts.com/highcharts.js"></script>
+	
 	<LINK REL=StyleShyeet HREF="/static/css/navigation.css" TYPE="text/css" MEDIA=screen>
 	<LINK REL=StyleSheet HREF="/static/css/screen.css" TYPE="text/css" MEDIA=screen>
 		
@@ -77,7 +81,7 @@
 				My Profile
 				</a>
 			</li>
-			<li id="nav-reporting">
+			<li id="nav-report">
 				<!-- default to report last 7 days -->
 				<a href="/report/buyorder/7/">
 				Report
