--- a/template/BrowseBuyOrder.html
+++ b/template/BrowseBuyOrder.html
@@ -133,7 +133,7 @@
 			
 			// default to fill qty of 1
 			// var qty=j$(this).find('span[item="qty"]').html();
-			
+			var qty=1;
 			var price=j$(this).find('span[item="price"]').html();
 			var owner=j$(this).find('.product-list-item-footer-user').attr('name');
 			var postTime=j$(this).attr('postTime');
