--- a/template/ReportMySeller.html
+++ b/template/ReportMySeller.html
@@ -53,10 +53,11 @@
 			var start = new Date(j$(this).val());
 			var end = new Date(); // today
 			var diff = new Date(end - start);
+			
 			if (diff<0){
 				j$().toastmessage('showErrorToast','You can not pick a date in the future. Try again.');
 			}else{		
-				var days = Math.ceil(diff/1000/60/60/24);
+				var days = Math.floor(diff/1000/60/60/24);
 				window.location.href='/report/myseller/'+days+'/';
 			}
 		});
