--- a/template/ReviewCart.html
+++ b/template/ReviewCart.html
@@ -80,21 +80,17 @@
     	// now, based on conditions, we will enable certain inputs
     	j$('input[type="number"]').prop('disabled', true);
     	
-    	{% if cart.status=='Open' or cart.status=='Rejected' %}
+    	{% if cart.can_change_fill(me.key) %}
     		j$('input[type="number"]').prop('disabled', false);
-    		
+    	{% endif %}
+    	
     	// cart has been approved
     	// not allowing changing qty,price anymore
     	// but can start inputting shipping
-    	{% elif cart.status=='Ready for Processing' %}
+    	{% if cart.can_change_shipping(me.key) %}
     		j$('input[name^="shipping"]').prop('disabled', false);
+    	{% endif %}
     		
-    	// allow change shipment only when carrier has not picked up yet!
-		{% elif cart.status=='In Shipment' and cart.shipping_status=='Shipment Created' %}
-    		j$('input[name^="shipping"]').prop('disabled', false);			
-		{% endif %}
-		
-					    
 		// remove item from cart
 		j$(document).on('click','.command-link[item="buyorder-fill-remove"]',function(){
 			// call Server to remove this FillOrder from Cart
@@ -260,17 +256,9 @@
 			submit is only available to the seller who filled this cart
 			we can also use the cart.owner, which should be the same value as cart.terminal_seller
 		#}
-		{% if cart.status=='Open' and me.can_be_nur() and me.key == cart.terminal_seller%}
+		{% if cart.can_enter_approval(me.key) %}
 			<button class="my-button" item="approval-process">Submit for Approval</button>
-		{% elif cart.status=='Rejected' and me.can_be_nur() and me.key == cart.terminal_seller %}
-			<button class="my-button" item="approval-process">Submit for Approval</button>			
-			
-		{#
-			approval can only be executed by the buyer, not the seller
-		#}
-		{% elif cart.status=='Rejected' and me.can_be_doc() and me.key==cart.broker %}
-			<button class="my-button" item="approval-process">Approve</button>
-		{% elif cart.status=='In Approval' and me.can_be_doc() and me.key==cart.broker %}
+		{% elif cart.can_approve(me.key) %}
 			<button class="my-button" item="approval-process">Approve</button>
 			<button class="my-button" item="approval-process">Reject</button>
 		{% endif %}
@@ -280,7 +268,7 @@
 			Shipping inputs are available after approval, and for DOC who is also the broker of this cart
 			meaning he is the posting buyer of these items
 		#}
-		{% if cart.status=='Ready for Processing'  and me.can_be_doc() and me.key==cart.broker %}
+		{% if cart.can_change_shipping(me.key) %}
 		<div class="shopping-cart-pane" style="display:none;" itemId="{{ cart.key.id() }}">
 			<span id="shopping-cart-collapse-switch" title="Click to collapse cart view" style="text-decoration:underline;float:right;">
 				Close
@@ -466,7 +454,7 @@
 						{#
 							editing is only available to open cart and rejected cart
 						#}
-						{% if cart.status=='Open' or cart.status=='Rejected' %}
+						{% if cart.can_change_fill(me.key) %}
 							<input type="number" item="fill-price" itemId="{{ f.order.id() }}" value="{{ f.price }}" step="any"/>	
 						{% else %}
 							{{ f.price }}
@@ -487,13 +475,17 @@
 						{#
 							editing is only available to open cart and rejected cart
 						#}
-						{% if cart.status=='Open' or cart.status=='Rejected' %}
+						{% if cart.can_change_fill(me.key) %}
 							<input type="number" item="fill-qty" itemId="{{ f.order.id() }}" value="{{ f.qty }}" step="any"/>	
 						{% else %}
 							{{ f.qty }}
 						{% endif %}
 					</td>
-					<td><span class="command-link" itemId="{{ f.order.id() }}" item="buyorder-fill-remove">Remove</span></td>
+					<td>
+						{% if cart.can_change_fill(me.key) %}
+							<span class="command-link" itemId="{{ f.order.id() }}" item="buyorder-fill-remove">Remove</span>
+						{% endif %}
+					</td>
 				</tr>
 				{% endfor %}
 			</table>
@@ -513,11 +505,16 @@
 				<td>No. of Packages</td>
 				<td>{{ cart.shipping_num_of_package }}</td>
 			</tr>
+			
+			<!-- broker only view -->
+			{% if me.key==cart.broker %}
 			<tr><td>Shipping Status</td>
 				<td>{{ cart.shipping_status }}</td>
 				<td>Shipping Cost</td>
 				<td>{{ cart.shipping_cost }}</td>
 			</tr>
+			{% endif %}
+			
 			<tr><td>Last Modified Date</td>
 				<td>{{ cart.shipping_created_date }}</td>
 				<td>Shipping Label</td>
@@ -532,43 +529,50 @@
 	
 		<div class="quick-pane" id="sec-payment">
 		<h4>Payments</h4>
-		{% if cart.payout_slips %}
-			<table class="table-row-border" style="width:49%;float:left;margin-right:5px;">
-			<caption class="table-caption">Pay For This Deal</caption>
-			<thead>
-				<tr><td>Transaction Created On</td>
-					<td>Amount</td>
-					<td>Recorded By</td>
-				</tr>
-			</thead>
-			<tbody>		
-			{% for s in cart.payout_slips %}
-				<tr><td>{{ s.get().created_time }}</td>
-					<td>{{ s.get().amount }}</td>
-					<td>{{ s.get().last_modified_by.get().nickname }}</td>
-				</tr>
-			{% endfor %}
-			</tbody>
-			</table>
+		<!-- seller only view -->
+		{% if cart.terminal_seller==me.key %}
+			{% if cart.payout_slips %}
+				<table class="table-row-border" style="width:49%;float:left;margin-right:5px;">
+				<caption class="table-caption">Pay For This Deal</caption>
+				<thead>
+					<tr><td>Transaction Created On</td>
+						<td>Amount</td>
+						<td>Recorded By</td>
+					</tr>
+				</thead>
+				<tbody>		
+				{% for s in cart.payout_slips %}
+					<tr><td>{{ s.get().created_time }}</td>
+						<td>{{ s.get().amount }}</td>
+						<td>{{ s.get().last_modified_by.get().nickname }}</td>
+					</tr>
+				{% endfor %}
+				</tbody>
+				</table>
+			{% endif %}
 		{% endif %}
-		{% if cart.payin_slips %}
-			<table class="table-row-border" style="width:49%;">
-			<caption class="table-caption">Earn From This Deal</caption>
-			<thead>
-				<tr><td>Transaction Created On</td>
-					<td>Amount</td>
-					<td>Recorded By</td>
-				</tr>
-			</thead>
-			<tbody>		
-			{% for s in cart.payin_slips %}
-				<tr><td>{{ s.get().created_time }}</td>
-					<td>{{ s.get().amount }}</td>
-					<td>{{ s.get().last_modified_by.get().nickname }}</td>
-				</tr>
-			{% endfor %}
-			</tbody>
-			</table>
+
+		<!-- doc only view -->		
+		{% if cart.broker==me.key %}
+			{% if cart.payin_slips %}
+				<table class="table-row-border" style="width:49%;">
+				<caption class="table-caption">Earn From This Deal</caption>
+				<thead>
+					<tr><td>Transaction Created On</td>
+						<td>Amount</td>
+						<td>Recorded By</td>
+					</tr>
+				</thead>
+				<tbody>		
+				{% for s in cart.payin_slips %}
+					<tr><td>{{ s.get().created_time }}</td>
+						<td>{{ s.get().amount }}</td>
+						<td>{{ s.get().last_modified_by.get().nickname }}</td>
+					</tr>
+				{% endfor %}
+				</tbody>
+				</table>
+			{% endif %}
 		{% endif %}
 		</div>
 	
