--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1672,6 +1672,7 @@ button[item="submit-for-approval-btn"]:hover{
 	margin-left:auto;
 	margin-right:auto;
 	width:90%;
+	table-layout:fixed;
 }
 .sf-table td{
 	vertical-align:top;
@@ -1682,12 +1683,14 @@ button[item="submit-for-approval-btn"]:hover{
 }
 .sf-table td:nth-child(2n) {
 	text-align:left;
+	width:25%;
 }
 .sf-table td:nth-child(2n+1) {
     /*border-bottom: none;*/
 	font-weight:bold;
 	text-align:right;
 	padding-right:20px;
+	width:25%;
 }
 .command-link{
 	text-decoration:underline;
