Splitting cart management into two screens and give it a separate level 1 navigation.

--- a/template/ManageCartAsSeller.html
+++ b/template/ManageCartAsSeller.html
@@ -1,11 +1,12 @@
-{% extends "/template/OrderBase.html" %}
+{% extends "/template/CartBase.html" %}
 
 {% block customJS %}
 <script type="text/javascript">
     j$(document).ready(function(){	
-    	j$('#nav-order').addClass('level-1-navigation-selected');
+    	j$('#nav-cart').addClass('level-1-navigation-selected');
+    	
 		j$('.level-2-navigation').show();
-		j$('#nav-cart-manage').addClass('level-2-navigation-selected');
+		j$('#nav-cart-as-seller').addClass('level-2-navigation-selected');
 		
 		// approval process
 		j$(document).on('click','button[item="approval-process"]',function(){
@@ -28,13 +29,7 @@
 			);			
 		});		
 		
-		j$('#tabs-min').tabs({
-
-		});
 		j$('#my-carts').dataTable({
-			"sPaginationType": "full_numbers"
-		});
-		j$('#broker-carts').dataTable({
 			"sPaginationType": "full_numbers"
 		});
     });
@@ -43,20 +38,11 @@
 {% endblock %}
 
 {% block main %}
-	<h1 class="ariel-blue">Manage Approvals</h1>
+	<h1 class="ariel-blue">Seller Carts</h1>
 	<p class="ariel-blue ariel-p">
-		You can review and manage shopping orders that have been placed by you (as a seller) and ones that need your approval (as a buyer). Use the 
-		links to get details of a cart to assist your decision. May the force be with you.
+		As a seller, you have offered items to fill a request of a buyer. Use this page to review and keep track of your selling status.
 	</p>
 
-	<div id="tabs-min">
-		<ul>
-			<li><a href="#tab-my-carts">Carts I Am Selling</a></li>
-			<li><a href="#tab-broker-carts">Carts I Am Buying</a></li>
-		</ul>
-		
-		<div id="tab-my-carts">
-		
 <table class="pretty" border="0" cellpadding="0" cellspacing="0"  id="my-carts">
 	<thead>
 		<tr><td></td></tr>
@@ -141,79 +127,5 @@
 		{% endfor %}
 	</tbody>
 </table>
-	</div>
 	
-	<div id="tab-broker-carts">
-<table class="pretty" border="0" cellpadding="0" cellspacing="0"  id="broker-carts">
-	<thead>
-		<tr><td></td></tr>
-	</thead>
-	<tbody>
-		{% for c in broker_carts %}
-			<tr>
-				<td style="text-align:left;padding:10px;">
-					<a href="{{ review_url }}?cart={{ c.key.id() }}&owner={{ c.owner.id() }}">
-						<h4>
-						Cart# {{ c.key.id() }}
-						<span class="redheart" style="float:right;">
-						{{ c.status }}
-						</span>
-						</h4>
-					</a>
-					Posted on {{ c.created_time }}
-					
-					<table class="sf-table" style="margin-top:10px;margin-bottom:10px;">
-						<tr><td>For Client</td>
-							<td>
-								{% if c.terminal_buyer %}
-									{{ c.terminal_buyer.get().nickname }}
-								{% endif %}
-							</td>
-							<td>Seller</td>
-							<td>
-								{{ c.terminal_seller.get().nickname }}
-							</td>
-						</tr>								
-						<tr><td>Payable</td>
-							<td>{{ c.payable }}</td>
-							<td>Receivable</td>
-							<td>{{ c.receivable }}</td>
-						</tr>
-						<tr></tr>
-					</table>
-					
-					{% if c.fills|length > 0 %}
-					<div class="list-of-photo">
-						<ul>
-						{% for f in c.fills %}
-							<li>
-							<a href="/buyorder/browse/{{ f.order.id() }}/">
-								<img src="{{ f.order.get().image }}" width="60px" height="60px"/>
-							</a>
-							</li>
-						{% endfor %}
-						</ul>
-					</div>
-					
-					<div>
-						{% if c.status=='In Approval' and me.can_be_doc() %}
-							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}" ownerId="{{ c.owner.id() }}">Approve</button>
-							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}" ownerId="{{ c.owner.id() }}">Reject</button>
-						{% endif %}
-					</div>
-					{% else %}
-					{% endif %}
-					
-					{% if c.shipping_status %}
-						{{ c.shipping_status }}
-					{% endif %}
-				</td>
-			</tr>
-		{% endfor %}
-	</tbody>
-</table>
-	
-	</div>
-	
-</div>
 {% endblock %}
