--- a/template/ReportMySeller.html
+++ b/template/ReportMySeller.html
@@ -127,7 +127,7 @@ In addition, you can give your buyers feedbacks and rate them based on your expe
 	
 		<table class="two-col-table table-row-border">
 			<thead>
-				<tr><td colspan="2" style="text-align:right;">Deal Size ($)</td><td>Status</td>
+				<tr><td></td><td>Deal Size ($)</td><td>Status</td>
 			</thead>
 			<tbody>
 			
