--- a/template/base.html
+++ b/template/base.html
@@ -71,6 +71,11 @@
 				Shopping
 				</a>
 			</li>
+			<li id="nav-cart">
+				<a href="/cart/manage/seller">
+				Transactions
+				</a>
+			</li>			
 			<li id="nav-banking">
 				<a href="/cart/banking">
 				Banking
